more fixes and alerts